// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Listen A11y I can see the skip to content link 1`] = `"সরাসরি কনটেন্টে যান"`;

exports[`Canonical Listen Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Listen Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Listen Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "31",
  },
  {
    "p": "bengali.listen.cpe4r4vmk5rdo.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:cpe4r4vmk5rdo]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-bengali]",
  },
  {
    "x4": "[bn]",
  },
  {
    "x7": "[article-sfv]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Test]",
  },
  {
    "x11": "[2026-10-01T15:02:44.954Z]",
  },
  {
    "x12": "[2026-10-02T14:36:08.078Z]",
  },
]
`;

exports[`Canonical Listen Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, বাংলা",
  "url": "/bengali",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 2`] = `
{
  "text": "বিবিসির ওপর কেন আপনি আস্থা রাখতে পারেন",
  "url": "https://www.bbc.com/bengali/institutional-50409861",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 3`] = `
{
  "text": "ব্যবহারের শর্তাবলী",
  "url": "https://www.bbc.com/bengali/institutional-37289190",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 4`] = `
{
  "text": "বিবিসি সম্পর্কে",
  "url": "https://www.bbc.com/bengali/institutional-37289764",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 5`] = `
{
  "text": "প্রিভেসি নীতি",
  "url": "https://www.bbc.com/bengali/institutional-37289766",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 6`] = `
{
  "text": "কুকিজ",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 7`] = `
{
  "text": "বিবিসির সাথে যোগাযোগ করুন",
  "url": "https://www.bbc.co.uk/bengali/send/u50853247",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 8`] = `
{
  "text": "অন্যান্য ভাষায় বিবিসির সংবাদ",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 9`] = `
{
  "text": "বাইরের লিংক সম্পর্কে বিবিসির দৃষ্টিভঙ্গি সম্বন্ধে পড়ুন।",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Listen Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/bengali"`;

exports[`Canonical Listen Footer Paragraphs should match text 1`] = `"© 2026 বিবিসি। বাইরের কোন সাইটের তথ্যের জন্য বিবিসি দায়বদ্ধ নয়। বাইরের লিংক সম্পর্কে বিবিসির দৃষ্টিভঙ্গি সম্বন্ধে পড়ুন।"`;

exports[`Canonical Listen Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, বাংলা",
  "svg": <path
    d="M759.927 265.747a4646.67 4646.67 0 00-23.49-37.241 2633.129 2633.129 0 00-23.49-36.2v73.441h-22.002V159.45h23.192a2668.556 2668.556 0 0123.713 36.053 2774.159 2774.159 0 0123.266 36.646V159.45h22.004v106.298h-23.193zM804.186 159.45h73.145v19.029h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.448zM982.1 265.747a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978H919.51a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.587 3259.894 3259.894 0 0018.882-77.457h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.532a1845.28 1845.28 0 01-13.232 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.977c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.869-1.138 15.388-3.419 3.517-2.279 5.277-5.45 5.277-9.514 0-3.071-.868-5.476-2.601-7.211-1.735-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.001-2.973-15.461-4.757-4.46-1.784-8.228-3.889-11.3-6.319-3.072-2.427-5.402-5.352-6.987-8.771-1.586-3.42-2.378-7.508-2.378-12.265 0-6.74 1.71-12.537 5.129-17.395 3.42-4.854 8.25-8.597 14.495-11.224 6.244-2.625 13.678-3.94 22.3-3.94 5.65 0 11.2.646 16.651 1.933 5.45 1.29 10.356 3.024 14.719 5.204v20.218c-4.363-2.676-9.292-4.757-14.793-6.244-5.5-1.487-11.027-2.23-16.577-2.23-6.046 0-10.73 1.04-14.049 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.378 6.616 1.585 1.635 3.84 2.974 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.048 5.055 1.29 9.761 2.702 14.124 4.237 4.36 1.538 8.2 3.494 11.522 5.872 3.32 2.379 5.895 5.403 7.73 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.039-1.735 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.448s-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical Listen Header Navigation link should match text and url 1`] = `
{
  "text": "মূলপাতা",
  "url": "/bengali",
}
`;

exports[`Canonical Listen Image Caption should match text 1`] = `"অডিওর ক্যাপশান, the boop from slack"`;

exports[`Canonical Listen Image should match snapshot 1`] = `
<noscript>
  <div>
    <div
      class="css-1pw39my"
    >
      <strong
        class="css-1mo6435"
      >
        আপনার ডিভাইস মিডিয়া প্লেব্যাক সমর্থন করে না
      </strong>
    </div>
  </div>
</noscript>
`;

exports[`Canonical Listen Main heading should match text 1`] = `"syndication test run"`;

exports[`Canonical Listen Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1ocpd8x"
  data-e2e="media-loader__container"
>
  <div
    class="css-zmtwe4"
    data-simorgh-media-loader="inactive"
  >
    <div
      class="media-player css-mw2k38"
      data-e2e="media-player"
    >
      <noscript>
        <div>
          <div
            class="css-1pw39my"
          >
            <strong
              class="css-1mo6435"
            >
              আপনার ডিভাইস মিডিয়া প্লেব্যাক সমর্থন করে না
            </strong>
          </div>
        </div>
      </noscript>
    </div>
  </div>
  <figcaption
    class="css-188p8nm"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="css-ju1gaf"
      >
        অডিওর ক্যাপশান, 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        the boop from slack
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/bengali/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/bengali/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/bengali/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/bengali/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/bengali/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Listen SEO Canonical link 1`] = `"http://localhost:7081/bengali/listen/cpe4r4vmk5rdo"`;

exports[`Canonical Listen SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Listen SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Listen SEO Heading level 1 1`] = `"syndication test run"`;

exports[`Canonical Listen SEO Lang attribute 1`] = `"bn"`;

exports[`Canonical Listen SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/bengali/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News বাংলা",
        "noBylinesPolicy": "https://www.bbc.com/bengali/institutional-50409861#authorexpertise",
      },
      "dateModified": "2026-10-02T14:36:08.078Z",
      "datePublished": "2026-10-01T15:02:44.954Z",
      "headline": "Test",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_bengali/p01xcmls.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "bn",
        "name": "Bengali",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/bengali/listen/cpe4r4vmk5rdo",
        "@type": "WebPage",
        "name": "Test",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/bengali/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News বাংলা",
        "publishingPrinciples": "https://www.bbc.com/bengali/institutional-50409861",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_bengali/p01xcmls.png",
      "url": "http://localhost:7081/bengali/listen/cpe4r4vmk5rdo",
    },
  ],
}
`;

exports[`Canonical Listen SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "the boop from slack",
  "duration": "PT2S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/cpe4r4vmk5rdo/p01xcmlm/bn",
  "name": "the boop from slack",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01xcmls.png",
  "uploadDate": "2026-08-26T17:01:00.000Z",
}
`;

exports[`Canonical Listen SEO OG description 1`] = `"Test"`;

exports[`Canonical Listen SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_bengali/p01xcmls.png"`;

exports[`Canonical Listen SEO OG image alt 1`] = `"the boop from slack"`;

exports[`Canonical Listen SEO OG locale 1`] = `"bn-BD"`;

exports[`Canonical Listen SEO OG site name 1`] = `"BBC News বাংলা"`;

exports[`Canonical Listen SEO OG title 1`] = `"Test - BBC News বাংলা"`;

exports[`Canonical Listen SEO OG type 1`] = `"article"`;

exports[`Canonical Listen SEO OG url 1`] = `"http://localhost:7081/bengali/listen/cpe4r4vmk5rdo"`;

exports[`Canonical Listen SEO Page title 1`] = `"Test - BBC News বাংলা"`;

exports[`Canonical Listen SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Listen SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Listen SEO Twitter creator 1`] = `"@bbcbangla"`;

exports[`Canonical Listen SEO Twitter description 1`] = `"Test"`;

exports[`Canonical Listen SEO Twitter image alt 1`] = `"the boop from slack"`;

exports[`Canonical Listen SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_bengali/p01xcmls.png"`;

exports[`Canonical Listen SEO Twitter site 1`] = `"@bbcbangla"`;

exports[`Canonical Listen SEO Twitter title 1`] = `"Test - BBC News বাংলা"`;

exports[`Canonical Listen Timestamp should match text and date 1`] = `
{
  "date": "2026-10-01",
  "text": "১ অক্টোবর ২০২৬",
}
`;
